--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  background: linear-gradient(to right, #ff0000, #000000);
+}
+
 input {
   padding: 0.75rem;
   border: 1px solid #ccc;
