ajout movie details page

--- a/Frontend/src/app/favoris/favoris.component.html
+++ b/Frontend/src/app/favoris/favoris.component.html
@@ -6,7 +6,7 @@
 
 <div class="favoris-ligne " *ngIf="favoris.length > 0">
   <div *ngFor="let film of favoris" class="film">
-    <img [src]="'https://image.tmdb.org/t/p/w200' + film.poster_path" alt="{{ film.title }}">
+    <img [src]="'https://image.tmdb.org/t/p/w200' + film.poster_path" alt="{{ film.title }}" (click)="goToMovieDetails(film.id)">
     <h3>{{ film.title }}</h3>
     <p>Sorti en : {{ film.release_date }}</p>
     <button (click)="retirerFavori(film.id)">Retirer</button>
